# gfunc

./: .gitignore  LICENSE  MANIFEST.in  README.md  quickstart.ipynb  quickstart.py  setup.cfg  setup.py
src/gfunc/: __init__.py  cmils.py  ics.py  ils.py  libcmils.f90  libcmils.pyf  libics.f90  libics.pyf  mics.py  mils.py
src/gfunc/torchmodel/: traced_micsann.pt
