[metadata]
name = gfunc
version = 0.1.0
url = https://github.com/yutaka-shoji/gfunc
author = Shoji, Yutaka
author_email = ytk.shoji@gmail.com
license_files = LICENSE
description = evaluate g-function for ground heat exchanger simulation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
  = src
packages = find:
include_package_data=True
install_requires =
  numpy
  scipy
  pandas
  torch
  importlib_resources

[options.packages.find]
where=src

[options.package_data]
* = torchmodel/*.pth, torchmodel/*.pt

[flake8]
ignore = E203, W503
max-line-length = 88
max-complexity = 10
